# rust_web_rocket_test

./: Cargo.toml  Rocket.toml
src/: main.rs
src/api/: demo.rs
src/utils/: response_data.rs
