[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["shenzhenquan <814471424@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4"
serde = { version = "1.0", features = ["derive"] }